<resources>
    <string name="app_name">Food ECommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">your google web client id</string>
    <string name="image_description">Description</string>

    <!-- Login Activity -->
    <string name="welcome_back">Welcome back</string>
    <string name="email_address">Email Address</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="no_account">Dont have an account ?</string>
    <!-- Login Activity -->

    <string name="viewpager_description">Swipe through the images</string>
    <string name="title_activity_my_account">MyAccount</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="please_enter_the_confirmation_code_here_to_complete_registration">Please enter the confirmation code here to complete registration</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify_code">Verify Code</string>
    <string name="remember_password">Remember password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>

</resources>