<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F4F4F4"
    android:layout_height="match_parent"
    tools:context=".EmailConfirmActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/linearLayout"
        android:textColor="@color/purple_500"
        android:text="@string/check_your_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:textColor="@color/purple_700"
        android:text="@string/please_enter_the_confirmation_code_here_to_complete_registration"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="VerificationCode"
            android:hint="@string/enter_verification_code"/>

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg"
            android:text="@string/verify_code"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-150dp"
        android:layout_height="300dp">
        <ImageView
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bottom_design"/>
    </RelativeLayout>
</RelativeLayout>