<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F4F4F4"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/linearLayout"
        android:textColor="@color/purple_500"
        android:text="@string/welcome_back"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="Username"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/password"/>

        <CheckBox
            android:id="@+id/checkBoxSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Remember password?" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg"
            android:text="@string/login"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-150dp"
        android:layout_height="300dp">
        <ImageView
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bottom_design"/>
        <RelativeLayout
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/no_account"
                android:textAlignment="center"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/century_bold"
                android:text="@string/register_now"/>
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>